# tinydiff

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  clippy.toml  components.json  deny.toml  eslint.config.ts  index.html  justfile  knip.json  mise.toml  oxfmt.json  oxlint.json  package.json  tsconfig.json  typos.toml  vite.config.ts  vitest.config.ts
crates/tinydiff-core/: Cargo.toml
crates/tinydiff-core/src/: comments.rs  error.rs  fs.rs  git.rs  git_async.rs  lib.rs  types.rs
crates/tinydiff-gpui/: Cargo.toml  justfile
crates/tinydiff-gpui/src/: main.rs
crates/tinydiff-tauri/: Cargo.toml  justfile  tauri.conf.json
crates/tinydiff-tauri/capabilities/: default.json
crates/tinydiff-tauri/src/: lib.rs
dev/: tauri-mock.js  tauri-mock.ts
dev/fixtures/: git-status.ts
dev/fixtures/file-contents/: comments-new.rs  diff-viewer-new.tsx  diff-viewer-old.tsx  index.ts  readme-new.md  readme-old.md  settings-store-new.ts
src/: app-loader.browser.spec.tsx  app-loader.tsx  app.tsx  index.tsx
src-tauri/: .gitignore  Cargo.toml  justfile  tauri.conf.json
src-tauri/src/: comments.rs  fs.rs  git.rs  lib.rs  main.rs
src/components/: error-display.browser.spec.tsx  error-display.tsx
src/core/: app-mode.ts
src/features/comments/: comment-components.tsx  index.ts  use-comments.ts
src/features/components/ui/: button.tsx  input.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  tooltip.tsx
src/features/diff-viewer/: diff-view-provider.tsx  diff-viewer.browser.spec.tsx  diff-viewer.tsx  index.ts  use-git-file-contents.ts  worker-pool-config.ts
src/features/file-tree/: file-tree.browser.spec.tsx  file-tree.tsx  index.ts  keyboard-nav.property.spec.ts  keyboard-nav.ts  tree-builder.property.spec.ts  tree-builder.ts  tree-utils.ts  use-file-tree-keyboard.ts  use-git-status.ts
src/features/hooks/: use-mobile.ts
src/lib/: logger.ts  settings-store.ts
src/styles/: base.css  main.css
src/testing/: fake-tauri.ts  setup.ts
tauri-bindings/: index.ts
