[workspace]
resolver = "2"
members = ["crates/tinydiff-tauri", "crates/tinydiff-core", "crates/tinydiff-gpui"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
redundant_clone = "deny"
disallowed_methods = "deny"

panic = "warn"
str_to_string = "warn"
clone_on_ref_ptr = "warn"

too_many_arguments = "allow"
type_complexity = "allow"

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
