[package]
name = "tinydiff-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[features]
default = []
specta = ["dep:specta"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.20"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
fs2 = "0.4"
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
